# modular-video-clipping-system

./: README.md  pyproject.toml  test.yaml  yaml_gen.py
mvcs/: __init__.py  __main__.py  clip.yaml  config.py  error.py  gen.py  job.py  time.py  videos.yaml
tests/: __init__.py  test_config.py  test_job.py  test_time.py
