[tool.poetry]
name = "mvcs"
version = "0.1.0"
description = "Create short clips from longer videos using declarative YAML"
authors = [
    "Andrew Jackson <dorkmeisterx69@gmail.com>",
    "ktx3 <ktx3@protonmail.com>",
]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
mypy = "^0.780"
pylint = "^2.5.3"
pytest = "^5.4.3"
pytest-mypy = "^0.6.2"
pytest-pylint = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
